# async-workshop

./: Cargo.toml  README.md
.cargo/: config
chat/: Cargo.toml  README.md
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/server/: Cargo.toml
chat/server/src/: lib.rs  main.rs  server.rs
chat/src/: lib.rs  main.rs  peer.rs  server.rs
client/: Cargo.toml
client/solutions/: client.rs
client/src/: client.rs  main.rs
server/: Cargo.toml
server/solutions/: peer.rs
server/src/: main.rs  server.rs
