[package]
name = "client"
version = "0.0.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "You!"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.5"

futures-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"

structopt = "0.3"
