[package]
name = "server"
version = "0.0.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "You!"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.4"

tracing = "0.1"
tracing-futures = { git = "https://github.com/tokio-rs/tracing", rev = "9f1126a00d105ff85f5b65fc6457699430b1bed4", features = ["tokio-alpha"]}
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing" }

futures-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"
